Fix content shift bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background: #000000;
 }
 
 a {
